--- a/dev_POC/dev_model_IO_visualisation.ipynb
+++ b/dev_POC/dev_model_IO_visualisation.ipynb
@@ -14,8 +14,8 @@
     "-------\n",
     "Mike Tetley, ACCESS-NRI MED, March 2023"
     
-    Copyright 2022 ACCESS-NRI and contributors. See the top-level COPYRIGHT file for details.
-    SPDX-License-Identifier: Apache-2.0
+    "Copyright 2022 ACCESS-NRI and contributors. See the top-level COPYRIGHT file for details."
+    "SPDX-License-Identifier: Apache-2.0"
    ]
   },
   {
